--- a/portfolio.html
+++ b/portfolio.html
@@ -336,6 +336,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-right">
+          <p class="footer-social">Subscribe</p>
+          <label class="visually-hidden" for="email">email</label>
+          <div class="footer-forms">
+            <button class="footer-btn" type="submit">
+              <span class="footer-right-text">Subscribe</span>
+              <svg class="footer-right-icon">
+                <use href="./images/symbol-defs.svg#icon-telegram"></use>
+              </svg>
+            </button>
+            <input
+              class="footer-input"
+              type="text"
+              id="email"
+              placeholder="E-mail"
+              name="email"
+            />
+          </div>
+        </div>
       </div>
     </footer>
   </body>
