--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                   <a class="policy-link" href="">Privacy Policy</a>
                 </p>
               </div>
+              <button type="submit" class="modal-btn">Send</button>
               </div>
             </form>
           </div>
